--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="row row-50 row-lg-60">        
               <div class="col-12">
                 <ul class="footer-minimal-nav">                
-                  <li><a href="contacts.html">Contato</a></li>
+                  <li><a href="contacts.html"></a></li>
                 </ul>
               </div>
               <div class="col-12">
